---------------------------------------------------------------------------
Version 5.7.3  [V5-DEVEL] (rgerhards), 2010-12-??
- added $IMUDPSchedulingPolicy and $IMUDPSchedulingPriority config settings
- added $LocalHostName config directive
- bugfix: fixed build problems on some platforms
  namely those that have 32bit atomic operations but not 64 bit ones
- bugfix: local hostname was pulled too-early, so that some config 
  directives (namely FQDN settings) did not have any effect
---------------------------------------------------------------------------
Version 5.7.2  [V5-DEVEL] (rgerhards), 2010-11-26
- bugfix(important): problem in TLS handling could cause rsyslog to loop
  in a tight loop, effectively disabling functionality and bearing the
  risk of unresponsiveness of the whole system.
  Bug tracker: http://bugzilla.adiscon.com/show_bug.cgi?id=194
- bugfix: imfile state file was not written when relative file name
  for it was specified
- bugfix: compile failed on systems without epoll_create1()
  Thanks to David Hill for providing a fix.
- bugfix: atomic increment for msg object may not work correct on all
  platforms. Thanks to Chris Metcalf for the patch
- bugfix: replacements for atomic operations for non-int sized types had
  problems. At least one instance of that problem could potentially lead
  to abort (inside omfile).
---------------------------------------------------------------------------
Version 5.7.1  [V5-DEVEL] (rgerhards), 2010-10-05
- support for Hadoop's HDFS added (via omhdfs)
- imuxsock now optionally use SCM_CREDENTIALS to pull the pid from the log
  socket itself
  (thanks to Lennart Poettering for the suggesting this feature)
- imuxsock now optionally uses per-process input rate limiting, guarding the
  user against processes spamming the system log
  (thanks to Lennart Poettering for suggesting this feature)
- added new config statements
  * $InputUnixListenSocketUsePIDFromSystem 
  * $SystemLogUsePIDFromSystem 